PGADMIN/sqpgadmin/templates/08-qnode01-pgadmin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: postgres
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-nginx
   rules:
   - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: pgadmin-service
            port:
              number: 80
